# backend-clothing-shop

./: .env.example  .gitignore  Makefile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
project/: settings.py  urls.py
shop/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_category_product_image_alter_product_category.py  0003_product_is_new_collection.py  0004_color_size_order_comment_order_delivery_address_and_more.py  0005_order_created_at.py
src/: main.py
src/api/: router.py
src/api/v1/: router.py
src/api/v1/endpoints/: monitoring.py
src/app/: entities.py  exceptions.py  service.py
src/app/config/: __init__.py  base.py  development.py  production.py
src/application/: service.py  usecase.py
src/application/config/: __init__.py  base.py  development.py  production.py
src/domain/: provider.py
src/domain/entities/: base.py  token.py  user.py
src/domain/interfaces/: monitoring.py  password_manager.py  token_service.py  uow.py  user.py
src/domain/usecases/: login_user.py  monitoring.py  refresh_token.py  register_user.py
src/presenters/api/: router.py
src/presenters/api/v1/: router.py
src/presenters/api/v1/endpoints/: auth.py  monitoring.py
src/presenters/api/v1/schemas/: auth.py  monitoring.py
