[project]
name = "shop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all,standard]>=0.115.12",
    "pydantic-settings>=2.9.1",
    "python-decouple>=3.8",
    "ruff>=0.11.13",
    "uvicorn[standard]>=0.34.3",
]
